Fix misaligned mobile nav

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -148,6 +148,7 @@
             .page-link {
                 display: block;
                 padding: 5px 10px;
+                margin-left: 0;
             }
         }
     }
